final texts added

--- a/index.html
+++ b/index.html
@@ -406,10 +406,137 @@
 
         <div class="parted_world">
             <div class="earth_60 js-earth_60"></div>
-            <div class="earth_20"></div>
-            <div class="earth_20_2"></div>
-            <div class="earth_part_1"></div>
+            <div class="earth_20 js-earth_20"></div>
+            <div class="earth_20_2 js-earth_20_2"></div>
+            <div class="earth_line_part_40 js-earth_line_part_40"></div>
         </div>
+    </div>
+    <div class="js-slide-energy-60 slide slide-energy-60 hide">
+        <h3 class="title js-title">About 60% are for our Indirect choices:<br/>
+            Industrial<br/>
+            Commercial<br/>
+            Transportation of goods<br/>
+            These are all for our own interest.<br/><br/>
+
+            Examples are:<br/>
+            Transportation of food<br/>
+            Stay in a hotel for vacation<br/>
+            Heated office building<br/>
+        </h3>
+
+        <div class="parted_world">
+            <div class="earth_60 js-earth_60"></div>
+            <div class="earth_20 js-earth_20"></div>
+            <div class="earth_20_2 js-earth_20_2"></div>
+            <div class="earth_line_part_60 js-earth_line_part_60"></div>
+        </div>
+    </div>
+    <div class="js-slide-energy-50 slide slide-energy-50 hide">
+        <h3 class="title js-title">50% of this is for our HouseHold<br/>
+            (Heating, cooling, electricity)
+        </h3>
+
+        <div class="parted_world">
+            <div class="earth_60 js-earth_60"></div>
+            <div class="earth_20 js-earth_20"></div>
+            <div class="earth_20_2 js-earth_20_2"></div>
+            <div class="earth_line_part_50 js-earth_line_part_50"></div>
+        </div>
+    </div>
+    <div class="js-slide-energy-50-other slide slide-energy-50-other hide">
+        <h3 class="title js-title">The other 50% is for our Transport<br/>
+            (car(s), motorbike, etc.)
+        </h3>
+
+        <div class="parted_world">
+            <div class="earth_60 js-earth_60"></div>
+            <div class="earth_20 js-earth_20"></div>
+            <div class="earth_20_2 js-earth_20_2"></div>
+            <div class="earth_line_part_50_other js-earth_line_part_50_other"></div>
+        </div>
+    </div>
+    <div class="js-slide-energy-40-hands slide slide-energy-40-hands hide">
+        <h3 class="title js-title">This 40% is directly in our hands</h3>
+
+        <div class="parted_world">
+            <div class="earth_60 js-earth_60"></div>
+            <div class="earth_20 js-earth_20"></div>
+            <div class="earth_20_2 js-earth_20_2"></div>
+        </div>
+    </div>
+    <div class="js-slide-energy-60-follow slide slide-energy-60-follow hide">
+        <h3 class="title js-title">The other 60% will follow<br/>
+            It’s still in our hands<br/>
+            even indirectly.<br/>
+            We choose governments<br/>
+            We choose where we buy from</h3>
+
+        <div class="parted_world">
+            <div class="earth_60 js-earth_60"></div>
+            <div class="earth_20 js-earth_20"></div>
+            <div class="earth_20_2 js-earth_20_2"></div>
+        </div>
+    </div>
+    <div class="js-slide-final-text-1 slide slide-final-text-1 final-text hide">
+        <h3 class="title js-title">Help !<br/>
+            In turning this world around</h3>
+    </div>
+    <div class="js-slide-final-text-2 slide slide-final-text-1 final-text hide">
+        <h3 class="title js-title">Help !<br/>
+            In turning this world around</h3>
+        <h3 class="title js-title">Be a Hero<br/>
+            Get to Zero !</h3>
+    </div>
+    <div class="js-slide-final-text-3 slide slide-final-text-1 final-text hide">
+        <h3 class="title js-title">Help !<br/>
+            In turning this world around</h3>
+        <h3 class="title js-title">Be a Hero<br/>
+            Get to Zero !</h3>
+        <h3 class="title js-title">It saves you money!<br/>
+            ( 50% on electricity )</h3>
+    </div>
+    <div class="js-slide-final-text-4 slide slide-final-text-1 final-text hide">
+        <h3 class="title js-title">Help !<br/>
+            In turning this world around</h3>
+        <h3 class="title js-title">Be a Hero<br/>
+            Get to Zero !</h3>
+        <h3 class="title js-title">It saves you money!<br/>
+            ( 50% on electricity )</h3>
+        <h3 class="title js-title">It makes you Independent !</h3>
+    </div>
+    <div class="js-slide-final-text-5 slide slide-final-text-1 final-text hide">
+        <h3 class="title js-title">Help !<br/>
+            In turning this world around</h3>
+        <h3 class="title js-title">Be a Hero<br/>
+            Get to Zero !</h3>
+        <h3 class="title js-title">It saves you money!<br/>
+            ( 50% on electricity )</h3>
+        <h3 class="title js-title">It makes you Independent !</h3>
+        <h3 class="title js-title">It’s better for our planet</h3>
+    </div>
+    <div class="js-slide-final-text-6 slide slide-final-text-1 final-text hide">
+        <h3 class="title js-title">Help !<br/>
+            In turning this world around</h3>
+        <h3 class="title js-title">Be a Hero<br/>
+            Get to Zero !</h3>
+        <h3 class="title js-title">It saves you money!<br/>
+            ( 50% on electricity )</h3>
+        <h3 class="title js-title">It makes you Independent !</h3>
+        <h3 class="title js-title">It’s better for our planet</h3>
+        <h3 class="title js-title">You are in Control !</h3>
+    </div>
+    <div class="js-slide-final-text-7 slide slide-final-text-1 final-text hide">
+        <h3 class="title js-title">Help !<br/>
+            In turning this world around</h3>
+        <h3 class="title js-title">Be a Hero<br/>
+            Get to Zero !</h3>
+        <h3 class="title js-title">It saves you money!<br/>
+            ( 50% on electricity )</h3>
+        <h3 class="title js-title">It makes you Independent !</h3>
+        <h3 class="title js-title">It’s better for our planet</h3>
+        <h3 class="title js-title">You are in Control !</h3>
+        <h3 class="title js-title">It’s more Efficient<br/>
+            ( Less Energy Transition and Transport )</h3>
     </div>
 </div>
 </body>
