final form added

--- a/index.html
+++ b/index.html
@@ -478,65 +478,150 @@
         </div>
     </div>
     <div class="js-slide-final-text-1 slide slide-final-text-1 final-text hide">
-        <h3 class="title js-title">Help !<br/>
-            In turning this world around</h3>
+        <div class="slide-final-form__titles">
+            <h3 class="title js-title">Help !<br/>
+                In turning this world around</h3>
+        </div>
     </div>
     <div class="js-slide-final-text-2 slide slide-final-text-1 final-text hide">
-        <h3 class="title js-title">Help !<br/>
-            In turning this world around</h3>
-        <h3 class="title js-title">Be a Hero<br/>
-            Get to Zero !</h3>
+        <div class="slide-final-form__titles">
+            <h3 class="title js-title">Help !<br/>
+                In turning this world around</h3>
+
+            <h3 class="title js-title">Be a Hero<br/>
+                Get to Zero !</h3>
+        </div>
     </div>
     <div class="js-slide-final-text-3 slide slide-final-text-1 final-text hide">
-        <h3 class="title js-title">Help !<br/>
-            In turning this world around</h3>
-        <h3 class="title js-title">Be a Hero<br/>
-            Get to Zero !</h3>
-        <h3 class="title js-title">It saves you money!<br/>
-            ( 50% on electricity )</h3>
+        <div class="slide-final-form__titles">
+            <h3 class="title js-title">Help !<br/>
+                In turning this world around</h3>
+
+            <h3 class="title js-title">Be a Hero<br/>
+                Get to Zero !</h3>
+
+            <h3 class="title js-title">It saves you money!<br/>
+                ( 50% on electricity )</h3>
+        </div>
     </div>
     <div class="js-slide-final-text-4 slide slide-final-text-1 final-text hide">
-        <h3 class="title js-title">Help !<br/>
-            In turning this world around</h3>
-        <h3 class="title js-title">Be a Hero<br/>
-            Get to Zero !</h3>
-        <h3 class="title js-title">It saves you money!<br/>
-            ( 50% on electricity )</h3>
-        <h3 class="title js-title">It makes you Independent !</h3>
+        <div class="slide-final-form__titles">
+            <h3 class="title js-title">Help !<br/>
+                In turning this world around</h3>
+
+            <h3 class="title js-title">Be a Hero<br/>
+                Get to Zero !</h3>
+
+            <h3 class="title js-title">It saves you money!<br/>
+                ( 50% on electricity )</h3>
+
+            <h3 class="title js-title">It makes you Independent !</h3>
+        </div>
     </div>
     <div class="js-slide-final-text-5 slide slide-final-text-1 final-text hide">
-        <h3 class="title js-title">Help !<br/>
-            In turning this world around</h3>
-        <h3 class="title js-title">Be a Hero<br/>
-            Get to Zero !</h3>
-        <h3 class="title js-title">It saves you money!<br/>
-            ( 50% on electricity )</h3>
-        <h3 class="title js-title">It makes you Independent !</h3>
-        <h3 class="title js-title">It’s better for our planet</h3>
+        <div class="slide-final-form__titles">
+            <h3 class="title js-title">Help !<br/>
+                In turning this world around</h3>
+
+            <h3 class="title js-title">Be a Hero<br/>
+                Get to Zero !</h3>
+
+            <h3 class="title js-title">It saves you money!<br/>
+                ( 50% on electricity )</h3>
+
+            <h3 class="title js-title">It makes you Independent !</h3>
+
+            <h3 class="title js-title">It’s better for our planet</h3>
+        </div>
     </div>
     <div class="js-slide-final-text-6 slide slide-final-text-1 final-text hide">
-        <h3 class="title js-title">Help !<br/>
-            In turning this world around</h3>
-        <h3 class="title js-title">Be a Hero<br/>
-            Get to Zero !</h3>
-        <h3 class="title js-title">It saves you money!<br/>
-            ( 50% on electricity )</h3>
-        <h3 class="title js-title">It makes you Independent !</h3>
-        <h3 class="title js-title">It’s better for our planet</h3>
-        <h3 class="title js-title">You are in Control !</h3>
+        <div class="slide-final-form__titles">
+            <h3 class="title js-title">Help !<br/>
+                In turning this world around</h3>
+
+            <h3 class="title js-title">Be a Hero<br/>
+                Get to Zero !</h3>
+
+            <h3 class="title js-title">It saves you money!<br/>
+                ( 50% on electricity )</h3>
+
+            <h3 class="title js-title">It makes you Independent !</h3>
+
+            <h3 class="title js-title">It’s better for our planet</h3>
+
+            <h3 class="title js-title">You are in Control !<br/>It’s your own Energy !</h3>
+        </div>
     </div>
     <div class="js-slide-final-text-7 slide slide-final-text-1 final-text hide">
-        <h3 class="title js-title">Help !<br/>
-            In turning this world around</h3>
-        <h3 class="title js-title">Be a Hero<br/>
-            Get to Zero !</h3>
-        <h3 class="title js-title">It saves you money!<br/>
-            ( 50% on electricity )</h3>
-        <h3 class="title js-title">It makes you Independent !</h3>
-        <h3 class="title js-title">It’s better for our planet</h3>
-        <h3 class="title js-title">You are in Control !</h3>
-        <h3 class="title js-title">It’s more Efficient<br/>
-            ( Less Energy Transition and Transport )</h3>
+        <div class="slide-final-form__titles">
+            <h3 class="title js-title">Help !<br/>
+                In turning this world around</h3>
+
+            <h3 class="title js-title">Be a Hero<br/>
+                Get to Zero !</h3>
+
+            <h3 class="title js-title">It saves you money!<br/>
+                ( 50% on electricity )</h3>
+
+            <h3 class="title js-title">It makes you Independent !</h3>
+
+            <h3 class="title js-title">It’s better for our planet</h3>
+
+            <h3 class="title js-title">You are in Control !<br/>It’s your own Energy !</h3>
+
+            <h3 class="title js-title">It’s more Efficient<br/>
+                ( Less Energy Transition and Transport )</h3>
+        </div>
+    </div>
+    <div class="js-slide-final-form slide slide-final-form final-text hide">
+        <div class="slide-final-form__titles">
+            <h3 class="title js-title">Help !<br/>
+                In turning this world around</h3>
+
+            <h3 class="title js-title">Be a Hero<br/>
+                Get to Zero !</h3>
+
+            <h3 class="title js-title">It saves you money!<br/>
+                ( 50% on electricity )</h3>
+
+            <h3 class="title js-title">It makes you Independent !</h3>
+
+            <h3 class="title js-title">It’s better for our planet</h3>
+
+            <h3 class="title js-title">You are in Control !<br/>It’s your own Energy !</h3>
+
+            <h3 class="title js-title">It’s more Efficient<br/>
+                ( Less Energy Transition and Transport )</h3>
+        </div>
+        <div class="final-form-line"></div>
+        <form class="final-form">
+            <img src="/images/solar_power_form.jpg" width="400" height="138">
+            <h4>Be a Hero</h4>
+
+            <p>
+                We calculate the Clean Energy on Your Property for Free !<br/>
+                We will tell you how much money it will Save you per Year.<br/>
+                We care about you and our future:
+            </p>
+            <ul>
+                <li> • We will
+                    <ins>not</ins>
+                    use this for email lists
+                </li>
+                <li> • This information stays with YECT only.</li>
+                <li> • We will remove this information any time at your will.</li>
+            </ul>
+            <div>
+                <label for="email">Email</label>
+                <input type="text" name="email" id="email"/>
+                <span class="final-form__pointer"></span>
+                <button>Get your Free Energy<br/> Calculation</button>
+            </div>
+            <div class="final-form__service-limited">
+                Our services are limited to: Netherlands<br/>
+                Belgium, Luxembourg and Spain.
+            </div>
+        </form>
     </div>
 </div>
 </body>
