--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <h3 class="title js-title">The world as we got it</h3>
 
         <img src="/images/hand_world.jpg" width="600" height="904" class="hand-world js-hand-world"/>
+
         <div class="earth js-earth"></div>
     </div>
     <div class="js-our-beautiful-planet slide slide-our-beautiful-planet hide">
@@ -303,11 +304,7 @@
             Position</h3>
 
         <div class="earth js-earth">
-            <div class="logo_wrapper">
-                <div class="logo_square js-logo">
-                    <div class="logo"></div>
-                </div>
-            </div>
+            <div class="logo js-logo"></div>
         </div>
     </div>
     <div class="js-slide-logo-180 slide slide-logo-180 hide">
@@ -315,7 +312,7 @@
             into it’s natural<br/>
             Position</h3>
 
-        <div class="earth js-earth">
+        <div class="earth_180 js-earth">
             <div class="logo_180"></div>
         </div>
     </div>
@@ -323,7 +320,7 @@
         <h3 class="title js-title">And see what Natural resources<br/>
             could do</h3>
 
-        <div class="earth js-earth">
+        <div class="earth_180 js-earth">
             <div class="logo_180 js-logo-180"></div>
         </div>
     </div>
@@ -333,7 +330,7 @@
             Water. It provides almost all energy<br/>
             for Norway</h3>
 
-        <div class="earth nature_power js-earth">
+        <div class="earth_180 nature_power js-earth">
             <div class="ocean_power js-ocean_power"></div>
             <div class="water_line_1 js-water_line_1"></div>
             <div class="water_line_2 js-water_line_2"></div>
@@ -344,7 +341,7 @@
             provide 20% of the world’s energy<br/>
             Needs.</h3>
 
-        <div class="earth nature_power js-earth">
+        <div class="earth_180 nature_power js-earth">
             <div class="ocean_power js-ocean_power"></div>
             <div class="water_line_1 js-water_line_1"></div>
             <div class="water_line_2 js-water_line_2"></div>
@@ -358,7 +355,7 @@
             This little square is enough to provide<br/>
             The world’s energy need !!!</h3>
 
-        <div class="earth nature_power js-earth">
+        <div class="earth_180 nature_power js-earth">
             <div class="ocean_power js-ocean_power"></div>
             <div class="water_line_1 js-water_line_1"></div>
             <div class="water_line_2 js-water_line_2"></div>
@@ -376,7 +373,7 @@
             More then 300 times of what we need.<br/>
             This square is less then 0,2% of our desert surface</h3>
 
-        <div class="earth nature_power js-earth">
+        <div class="earth_180 nature_power js-earth">
             <div class="ocean_power js-ocean_power"></div>
             <div class="water_line_1 js-water_line_1"></div>
             <div class="water_line_2 js-water_line_2"></div>
@@ -392,7 +389,7 @@
     <div class="js-slide-energy-choice slide slide-energy-choice hide">
         <h3 class="title js-title">It’s our Energy Choice.</h3>
 
-        <div class="earth nature_power js-earth">
+        <div class="earth_180 nature_power js-earth">
             <div class="ocean_power js-ocean_power"></div>
             <div class="water_line_1 js-water_line_1"></div>
             <div class="water_line_2 js-water_line_2"></div>
@@ -409,7 +406,6 @@
         <h3 class="title js-title">We decide directly for more then 40%<br/>
             of the Energy Source.</h3>
 
-        <div class="earth js-earth"></div>
         <div class="parted_world">
             <div class="earth_60 js-earth_60"></div>
             <div class="earth_20 js-earth_20"></div>
@@ -485,95 +481,88 @@
     </div>
     <div class="js-slide-final-text-1 slide slide-final-text-1 final-text hide">
         <div class="slide-final-form__titles">
-            <h3 class="title js-title">Help !<br/>
-                In turning this world around</h3>
-        </div>
-    </div>
-    <div class="js-slide-final-text-2 slide slide-final-text-1 final-text hide">
-        <div class="slide-final-form__titles">
-            <h3 class="title js-title">Help !<br/>
-                In turning this world around</h3>
+            <h3 class="title js-title" style="padding-bottom: 30px;">Be a Hero<br>
 
-            <h3 class="title js-title">Be a Hero<br/>
                 Get to Zero !</h3>
         </div>
     </div>
-    <div class="js-slide-final-text-3 slide slide-final-text-1 final-text hide">
+    <div class="js-slide-final-text-2 slide slide-final-text-2 final-text hide">
         <div class="slide-final-form__titles">
-            <h3 class="title js-title">Help !<br/>
-                In turning this world around</h3>
+            <h3 class="title js-title" style="padding-bottom: 30px;">Be a Hero<br>
 
-            <h3 class="title js-title">Be a Hero<br/>
                 Get to Zero !</h3>
 
-            <h3 class="title js-title">It saves you money!<br/>
+            <h3 class="title js-title" style="padding-bottom: 36px;">It saves you money!<br>
                 ( 50% on electricity )</h3>
         </div>
     </div>
-    <div class="js-slide-final-text-4 slide slide-final-text-1 final-text hide">
+    <div class="js-slide-final-text-3 slide slide-final-text-3 final-text hide">
         <div class="slide-final-form__titles">
-            <h3 class="title js-title">Help !<br/>
-                In turning this world around</h3>
+            <h3 class="title js-title" style="padding-bottom: 30px;">Be a Hero<br>
 
-            <h3 class="title js-title">Be a Hero<br/>
                 Get to Zero !</h3>
 
-            <h3 class="title js-title">It saves you money!<br/>
+            <h3 class="title js-title" style="padding-bottom: 36px;">It saves you money!<br>
                 ( 50% on electricity )</h3>
 
-            <h3 class="title js-title">It makes you Independent !</h3>
+            <h3 class="title js-title" style="padding-bottom: 33px;">It makes you Independent !</h3>
         </div>
     </div>
-    <div class="js-slide-final-text-5 slide slide-final-text-1 final-text hide">
+    <div class="js-slide-final-text-4 slide slide-final-text-4 final-text hide">
         <div class="slide-final-form__titles">
-            <h3 class="title js-title">Help !<br/>
-                In turning this world around</h3>
+            <h3 class="title js-title" style="padding-bottom: 30px;">Be a Hero<br>
 
-            <h3 class="title js-title">Be a Hero<br/>
                 Get to Zero !</h3>
 
-            <h3 class="title js-title">It saves you money!<br/>
+            <h3 class="title js-title" style="padding-bottom: 36px;">It saves you money!<br>
                 ( 50% on electricity )</h3>
 
-            <h3 class="title js-title">It makes you Independent !</h3>
-
-            <h3 class="title js-title">It’s better for our planet</h3>
+            <h3 class="title js-title" style="padding-bottom: 33px;">It makes you Independent !</h3>
+            <h3 class="title js-title" style="padding-bottom: 26px;">It makes you Saver !</h3>
         </div>
     </div>
-    <div class="js-slide-final-text-6 slide slide-final-text-1 final-text hide">
+    <div class="js-slide-final-text-5 slide slide-final-text-5 final-text hide">
         <div class="slide-final-form__titles">
-            <h3 class="title js-title">Help !<br/>
-                In turning this world around</h3>
+            <h3 class="title js-title" style="padding-bottom: 30px;">Be a Hero<br>
 
-            <h3 class="title js-title">Be a Hero<br/>
                 Get to Zero !</h3>
 
-            <h3 class="title js-title">It saves you money!<br/>
+            <h3 class="title js-title" style="padding-bottom: 36px;">It saves you money!<br>
                 ( 50% on electricity )</h3>
 
-            <h3 class="title js-title">It makes you Independent !</h3>
-
-            <h3 class="title js-title">It’s better for our planet</h3>
-
-            <h3 class="title js-title">You are in Control !<br/>It’s your own Energy !</h3>
+            <h3 class="title js-title" style="padding-bottom: 33px;">It makes you Independent !</h3>
+            <h3 class="title js-title" style="padding-bottom: 26px;">It makes you Saver !</h3>
+            <h3 class="title js-title" style="padding-bottom: 27px;">It’s better for our planet</h3>
         </div>
     </div>
-    <div class="js-slide-final-text-7 slide slide-final-text-1 final-text hide">
+    <div class="js-slide-final-text-6 slide slide-final-text-6 final-text hide">
         <div class="slide-final-form__titles">
-            <h3 class="title js-title">Help !<br/>
-                In turning this world around</h3>
+            <h3 class="title js-title" style="padding-bottom: 30px;">Be a Hero<br>Get to Zero !</h3>
 
-            <h3 class="title js-title">Be a Hero<br/>
-                Get to Zero !</h3>
-
-            <h3 class="title js-title">It saves you money!<br/>
+            <h3 class="title js-title" style="padding-bottom: 36px;">It saves you money!<br>
                 ( 50% on electricity )</h3>
 
-            <h3 class="title js-title">It makes you Independent !</h3>
+            <h3 class="title js-title" style="padding-bottom: 33px;">It makes you Independent !</h3>
+            <h3 class="title js-title" style="padding-bottom: 26px;">It makes you Saver !</h3>
+            <h3 class="title js-title" style="padding-bottom: 27px;">It’s better for our planet</h3>
 
-            <h3 class="title js-title">It’s better for our planet</h3>
+            <h3 class="title js-title" style="padding-bottom: 39px;">You are in Control !<br>It’s your own Energy !</h3>
+        </div>
+    </div>
+    <div class="js-slide-final-text-7 slide slide-final-text-7 final-text hide">
+        <div class="slide-final-form__titles">
+            <h3 class="title js-title" style="padding-bottom: 30px;">Be a Hero<br>
 
-            <h3 class="title js-title">You are in Control !<br/>It’s your own Energy !</h3>
+                Get to Zero !</h3>
+
+            <h3 class="title js-title" style="padding-bottom: 36px;">It saves you money!<br>
+                ( 50% on electricity )</h3>
+
+            <h3 class="title js-title" style="padding-bottom: 33px;">It makes you Independent !</h3>
+            <h3 class="title js-title" style="padding-bottom: 26px;">It makes you Saver !</h3>
+            <h3 class="title js-title" style="padding-bottom: 27px;">It’s better for our planet</h3>
+
+            <h3 class="title js-title" style="padding-bottom: 39px;">You are in Control !<br>It’s your own Energy !</h3>
 
             <h3 class="title js-title">It’s more Efficient<br/>
                 ( Less Energy Transition and Transport )</h3>
@@ -581,20 +570,17 @@
     </div>
     <div class="js-slide-final-form slide slide-final-form final-text hide">
         <div class="slide-final-form__titles">
-            <h3 class="title js-title">Help !<br/>
-                In turning this world around</h3>
-
-            <h3 class="title js-title">Be a Hero<br/>
+            <h3 class="title js-title" style="padding-bottom: 30px;">Be a Hero<br>
                 Get to Zero !</h3>
 
-            <h3 class="title js-title">It saves you money!<br/>
+            <h3 class="title js-title" style="padding-bottom: 36px;">It saves you money!<br>
                 ( 50% on electricity )</h3>
 
-            <h3 class="title js-title">It makes you Independent !</h3>
+            <h3 class="title js-title" style="padding-bottom: 33px;">It makes you Independent !</h3>
+            <h3 class="title js-title" style="padding-bottom: 26px;">It makes you Saver !</h3>
+            <h3 class="title js-title" style="padding-bottom: 27px;">It’s better for our planet</h3>
 
-            <h3 class="title js-title">It’s better for our planet</h3>
-
-            <h3 class="title js-title">You are in Control !<br/>It’s your own Energy !</h3>
+            <h3 class="title js-title" style="padding-bottom: 39px;">You are in Control !<br>It’s your own Energy !</h3>
 
             <h3 class="title js-title">It’s more Efficient<br/>
                 ( Less Energy Transition and Transport )</h3>
